# llms-experiments

./: .env.example  .gitignore  README_MLS_EXPERIMENTS.md  data-prepare.py  eda-and-report-bf-detection-task.ipynb  eda-and-report-triage-task.ipynb  eda-and-report.ipynb  pyproject.toml  run_bf_experiments.py  run_experiments.py  run_mls_experiments.py
experiment/: runner.py
experiment/providers/: anthropic_provider.py  base.py  gemini_provider.py  grok_provider.py  openai_provider.py
experiment/utils/: io.py  logger.py
prompts/: system_prompts.sample.yaml  user_prompts.sample.yaml
schemas/: bf_template.json  mls_template.json  template.sample.json  triage_template.json
